Sonar qube fixes